--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <body>
         <div class="input-Box">
-          
             <input type="password" required id="password">
             <span>Password</span>
+            <div id="toggle"></div>
         </div>
      
     </body>
